--- a/yudao-server/src/main/resources/application.yaml
+++ b/yudao-server/src/main/resources/application.yaml
@@ -316,3 +316,7 @@ debug: false
 # 插件配置 TODO 芋艿：【IOT】需要处理下
 pf4j:
   pluginsDir: /Users/anhaohao/code/gitee/ruoyi-vue-pro/plugins # 插件目录
+
+dataqc:
+  temp-dir: E:\data  # 临时文件目录
+# temp-dir: /tmp/batch-import  # 临时文件目录
