--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,9 @@
         <!-- 各种 module 拓展 -->
         <module>yudao-module-system</module>
         <module>yudao-module-infra</module>
-        <module>yudao-module-dataqc</module>
+<!--        <module>yudao-module-dataqc</module>-->
         <module>yudao-module-drug</module>
-        <!--        <module>yudao-module-member</module>-->
+<!--        <module>yudao-module-member</module>-->
 <!--        <module>yudao-module-bpm</module>-->
 <!--        <module>yudao-module-report</module>-->
 <!--        <module>yudao-module-mp</module>-->
